--- a/css/index.scss
+++ b/css/index.scss
@@ -1,22 +1,24 @@
-/* Basics */
-
-@import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(https://fonts.googleapis.com/css?family=Inconsolata:400, 700&display=swap);
 
 html,
 body {
     margin: 0;
-    padding: 1rem 2rem;
+    padding: 0;
     font-size: 16px;
+    background-color: lightgray;
+    font-family: "Inconsolata", monospace;
 }
 
-// @page {
-//     size: 7in 9.25in;
-//     margin: 27mm 16mm 27mm 16mm;
-// }
-
-body {
-    font-family: "Inconsolata", monospace;
+@page {
+    size: A4;
+    margin: 0;
+}
+@media print {
+    html,
+    body {
+        width: 210mm;
+        height: 297mm;
+    }
 }
 
 img,
@@ -40,40 +42,75 @@ b {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    align-items: start;
-    align-content: start;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+
+@define-mixin bg-picture {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+.page-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.printable-page {
+    width: 210mm;
+    height: 297mm;
+    position: relative;
+    background-color: #fff;
 }
 
 .header {
     @mixin flex-container;
+    padding: 20px 15px 0 15px;
 
     &__name {
         color: gray;
-        font-size: 36px;
-        width: 40%;
+        font-size: 50px;
+        width: 38%;
+        font-weight: 700;
     }
 
     &__main-info {
         display: block;
         order: 4;
-        width: 40%;
+        width: 43%;
         position: relative;
         top: -1rem;
+        font-size: 14px;
+        color: gray;
     }
 
     &__avatar {
-        width: 8rem;
-        height: 8rem;
+        @mixin bg-picture;
+        width: 10rem;
+        height: 10rem;
         border-radius: 50%;
         background-image: inline("IMG_1407.JPG");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        border: 5px solid #fff;
+        z-index: 1;
     }
 
     &__personal-info {
         width: 30%;
-        font-size: 12px;
+        color: #fff;
+        text-align: end;
+        line-height: 2rem;
+        z-index: 1;
+    }
+
+    .bg-image {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 560px;
+        height: 216px;
     }
 }
 
@@ -89,6 +126,7 @@ b {
 
 .content {
     @mixin flex-container;
+    padding: 0 15px 0 15px;
 
     .education {
         width: 55%;
@@ -98,11 +136,18 @@ b {
     .experience {
         width: 55%;
         order: 2;
+        position: relative;
+        top: -18rem;
     }
 
     .skills {
         width: 40%;
         order: 1;
+
+        #other-skills {
+            height: 500px;
+            width: 400px;
+        }
     }
 
     .hobbies {
@@ -111,11 +156,28 @@ b {
     }
 }
 
-.icon-art {
-    height: 1rem;
-    width: 1rem;
-    background-image: svg-load("../images/art.svg", fill=#000);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+//ICONS
+
+@define-mixin icon $file, $fill: #000 {
+    .icon-$(file) {
+        @mixin bg-picture;
+        height: 1rem;
+        width: 1rem;
+        display: inline-block;
+        background-image: svg-load(../images/$(file).svg, fill=$(fill));
+    }
 }
+@mixin icon art;
+@mixin icon graduate-cap;
+@mixin icon fix;
+@mixin icon tick;
+@mixin icon puzzle;
+@mixin icon camera;
+@mixin icon clapperboard;
+@mixin icon gamepad;
+@mixin icon snowboard-race;
+@mixin icon bg1;
+@mixin icon placeholder, #fff;
+@mixin icon mail, #fff;
+@mixin icon phone, #fff;
