--- a/css/index.scss
+++ b/css/index.scss
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    background-color: lightgray;
+    background-color: darkgray;
     font-family: "Inconsolata", monospace;
 }
 
@@ -151,8 +151,27 @@ b {
     }
 
     .hobbies {
+        @mixin flex-container;
+        justify-content: flex-start;
         width: 40%;
         order: 3;
+
+        &__title{
+            width: 100%;
+        }
+
+        figure{
+            text-align: center;
+            width: 45%;
+            padding: 0;
+            margin: 15px 0;
+            font-weight: bold;
+        }
+
+        .icon {
+            width: 1.5rem;
+            height: 1.5rem;
+        }
     }
 }
 
