--- a/css/index.scss
+++ b/css/index.scss
@@ -162,7 +162,7 @@ video {
         width: 60%;
         order: 2;
         position: relative;
-        top: -18rem;
+        top: -28rem;
     }
 
     .skills {
@@ -213,6 +213,9 @@ video {
 @mixin icon camera, #565656;
 @mixin icon clapperboard, #565656;
 @mixin icon gamepad, #565656;
+@mixin icon gear, #565656;
+@mixin icon spanner, #565656;
+@mixin icon tools, #565656;
 @mixin icon snowboard-race, #565656;
 @mixin icon bg1, #000;
 @mixin icon placeholder, #fff;
