--- a/css/index.scss
+++ b/css/index.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:400, 700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap);
 
 html,
 body {
@@ -57,10 +57,16 @@ video {
 
 .printable-page {
     width: 210mm;
+    min-width: 210mm;
     height: 297mm;
     position: relative;
     background-color: #fff;
-    padding: 20px;
+    padding: 20px 20px 20px 40px;
+    overflow: hidden;
+}
+
+.m-upper{
+    text-transform: uppercase;
 }
 
 .header {
@@ -83,17 +89,16 @@ video {
         order: 4;
         width: 43%;
         position: relative;
-        top: -1rem;
-        font-size: 14px;
+        top: -3rem;
+        font-size: 20px;
         color: gray;
     }
-
     &__avatar {
         @mixin bg-picture;
         width: 10rem;
         height: 10rem;
         border-radius: 50%;
-        background-image: inline("IMG_1407.JPG");
+        background-image: inline("avatar1.png");
         border: 5px solid #fff;
         z-index: 1;
     }
@@ -102,8 +107,9 @@ video {
         width: 30%;
         color: #fff;
         text-align: end;
-        line-height: 2rem;
+        line-height: 2.5rem;
         z-index: 1;
+
     }
 
     .bg-image {
@@ -115,29 +121,26 @@ video {
     }
 }
 
-.job {
-    display: inline;
-    &__title {
-        display: inline;
-    }
-    &__description {
-        display: inline;
-    }
-}
-
 .content {
     @mixin flex-container;
-    padding: 0 15px 0 15px;
+    flex-direction: column;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    align-content: space-between;
+
+    position: relative;
+    top: -60px;
+    height: 250mm;
 
     .section-title {
         text-transform: uppercase;
         font-size: 20px;
-        margin-bottom: 10px;
+        margin: 30px 0 10px 0;
     }
 
     .education {
-        width: 60%;
-        order: 0;
+        width: 65%;
+        order: 2;
 
         &__content {
             b,
@@ -145,36 +148,58 @@ video {
                 display: inline-block;
             }
         }
-
-        &__paragraph {
-            width: 25%;
-            vertical-align: top;
-            text-transform: uppercase;
-        }
-
-        &__info {
-            width: 70%;
-            text-align: left;
-        }
     }
 
     .experience {
-        width: 60%;
-        order: 2;
-        position: relative;
-        top: -28rem;
+        width: 65%;
+        order: 3;
+
+        &__item {
+
+            &--left {
+                display: inline-block;
+                width: 58%;
+                text-align: left;
+            }
+            
+            &--right {
+                display: inline-block;
+                width: 38%;
+                text-align: right;
+                font-weight: 700;
+            }
+
+            ul {
+                margin: 0;
+                padding-top: 5px;
+                padding-bottom: 5px;
+            }
+        }
     }
 
     .skills {
-        width: 33%;
-        order: 1;
+        width: 30%;
+        order: 0;
+
+        &__list {
+            font-weight: 700;
+            margin: 0 0 20px 0;
+            padding-left: 27px;
+        }
+
+        p {
+            margin: 0;
+        }
+        #tag-cloud{
+            height: 160px;
+        }
     }
 
     .hobbies {
         @mixin flex-container;
         justify-content: flex-start;
-        width: 33%;
-        order: 3;
+        width: 30%;
+        order: 1;
 
         .section-title {
             width: 100%;
@@ -182,7 +207,8 @@ video {
 
         figure {
             text-align: center;
-            width: 45%;
+            font-size: 12px;
+            width: 32%;
             padding: 0;
             margin: 15px 0;
             font-weight: bold;
@@ -192,6 +218,17 @@ video {
             width: 1.5rem;
             height: 1.5rem;
         }
+    }
+}
+
+footer {
+
+    .bg-image {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 560px;
+        height: 216px;
     }
 }
 
@@ -218,6 +255,8 @@ video {
 @mixin icon tools, #565656;
 @mixin icon snowboard-race, #565656;
 @mixin icon bg1, #000;
+@mixin icon bg2, #000;
+@mixin icon bg3, #000;
 @mixin icon placeholder, #fff;
 @mixin icon mail, #fff;
 @mixin icon phone, #fff;
