--- a/css/index.scss
+++ b/css/index.scss
@@ -98,7 +98,7 @@ video {
         width: 10rem;
         height: 10rem;
         border-radius: 50%;
-        background-image: inline("avatar1.png");
+        background-image: inline("IMG_1407.JPG");
         border: 5px solid #fff;
         z-index: 1;
     }
