--- a/css/index.scss
+++ b/css/index.scss
@@ -51,9 +51,9 @@ video {
 }
 
 .printable-page {
-    width: 210mm;
-    min-width: 210mm;
-    height: 297mm;
+    width: 793px;
+    min-width: 792px;
+    height: 1122px;
     position: relative;
     background-color: #fff;
     padding: 20px 20px 20px 40px;
