--- a/css/index.scss
+++ b/css/index.scss
@@ -65,7 +65,8 @@ div[size="A4"] {
     position: relative;
     background-color: #fff;
     overflow: hidden;
-    margin: 0.5cm auto;
+    margin: 0 auto;
+    margin-bottom: 0.5cm;
 	box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
 }
 
