--- a/css/index.scss
+++ b/css/index.scss
@@ -81,7 +81,7 @@ div[size="A4"] {
         font-size: 50px;
         width: 38%;
         font-weight: 700;
-        text-shadow: 4px 4px 8px rgb(94, 91, 91
+        text-shadow: 2px 2px 4px rgb(94, 91, 91);
 
         span {
             display: inline-block;
