--- a/css/index.scss
+++ b/css/index.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Inconsolata:400, 700&display=swap);
 html,
 body {
     margin: 0;
@@ -10,8 +10,8 @@ body {
 }
 
 @page {
-	size: A4;
-	margin: 0;
+    size: A4;
+    margin: 0;
 }
 
 @media print {
@@ -25,6 +25,15 @@ body {
             margin: 0;
             box-shadow: 0;
         }
+    }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+    //CSS
+    body {
+        transform: scale(0.48);
+        transform-origin: 0 0;
+        overflow: hidden;
     }
 }
 
@@ -55,8 +64,8 @@ video {
 }
 
 div[size="A4"] {
-	width: 21cm;
-	min-width: 21cm;
+    width: 21cm;
+    min-width: 21cm;
     height: 29.7cm;
     padding: 20px 20px 20px 40px;
 }
@@ -67,7 +76,7 @@ div[size="A4"] {
     overflow: hidden;
     margin: 0 auto;
     margin-bottom: 0.5cm;
-	box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
 }
 
 .m-upper {
