--- a/css/index.scss
+++ b/css/index.scss
@@ -29,10 +29,10 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-    //CSS
     body {
         transform: scale(0.48);
         transform-origin: 0 0;
+        font-size: 95%;
         overflow: hidden;
     }
 }
@@ -85,6 +85,7 @@ div[size="A4"] {
 
 .header {
     @mixin flex-container;
+
     &__name {
         color: #000;
         font-size: 50px;
@@ -144,6 +145,7 @@ div[size="A4"] {
     position: relative;
     top: -60px;
     height: 250mm;
+    
     .section-title {
         text-transform: uppercase;
         font-size: 20px;
