--- a/css/index.scss
+++ b/css/index.scss
@@ -32,7 +32,7 @@ body {
     body {
         transform: scale(0.48);
         transform-origin: 0 0;
-        font-size: 95%;
+        font-size: 85%;
         overflow: hidden;
     }
 }
@@ -143,17 +143,20 @@ div[size="A4"] {
     justify-content: flex-start;
     align-content: space-between;
     position: relative;
-    top: -60px;
+    top: -26px;
     height: 250mm;
     
     .section-title {
         text-transform: uppercase;
         font-size: 20px;
-        margin: 30px 0 10px 0;
+        // margin: 30px 0 10px 0;
+        margin-bottom: 10px;
     }
     .education {
         width: 65%;
+        height: 16%;
         order: 2;
+
         &__content {
             b,
             span {
@@ -185,7 +188,9 @@ div[size="A4"] {
     }
     .skills {
         width: 30%;
+        height: 58%;
         order: 0;
+
         &__list {
             font-weight: 700;
             margin: 0 0 20px 0;
@@ -201,7 +206,8 @@ div[size="A4"] {
     .hobbies {
         @mixin flex-container;
         justify-content: flex-start;
-        width: 30%;
+        width: 30%;    
+        height: 34%;
         order: 1;
         .section-title {
             width: 100%;
