--- a/css/index.scss
+++ b/css/index.scss
@@ -1,4 +1,15 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:400, 700&display=swap);
+@font-face {
+    font-family: "Inconsolata";
+    font-weight: 400;
+    src: url("../font/Inconsolata-Regular.ttf") format("truetype")
+}
+
+@font-face {
+    font-family: "Inconsolata";
+    font-weight: 700;
+    src: url("../font/Inconsolata-Bold.ttf") format("truetype");
+}
+
 html,
 body {
     margin: 0;
@@ -145,7 +156,7 @@ div[size="A4"] {
     position: relative;
     top: -26px;
     height: 250mm;
-    
+
     .section-title {
         text-transform: uppercase;
         font-size: 20px;
@@ -206,7 +217,7 @@ div[size="A4"] {
     .hobbies {
         @mixin flex-container;
         justify-content: flex-start;
-        width: 30%;    
+        width: 30%;
         height: 34%;
         order: 1;
         .section-title {
