--- a/css/index.scss
+++ b/css/index.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "Inconsolata";
     font-weight: 400;
-    src: url("../font/Inconsolata-Regular.ttf") format("truetype");
+    src: url("../font/Inconsolata-Regular.ttf") format("truetype")
 }
 
 @font-face {
@@ -18,6 +18,8 @@ body {
     color: #565656;
     font-family: "Inconsolata", monospace;
     line-height: 19.2px;
+    font-size: 100%;
+    text-decoration: none;
 }
 
 @page {
@@ -43,6 +45,7 @@ body {
     body {
         transform: scale(0.48);
         transform-origin: 0 0;
+        font-size: 100%;
         overflow: hidden;
     }
 }
