--- a/css/index.scss
+++ b/css/index.scss
@@ -19,7 +19,7 @@ body {
     font-family: "Inconsolata", monospace;
     line-height: 19.2px;
     font-size: 100%;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 @page {
@@ -156,15 +156,16 @@ div[size="A4"] {
     justify-content: flex-start;
     align-content: space-between;
     position: relative;
-    top: -26px;
+    top: -60px;
     height: 250mm;
 
     .section-title {
         text-transform: uppercase;
         font-size: 20px;
-        // margin: 30px 0 10px 0;
+        margin: 30px 0 10px 0;
         margin-bottom: 10px;
     }
+
     .education {
         width: 65%;
         height: 16%;
@@ -201,7 +202,7 @@ div[size="A4"] {
     }
     .skills {
         width: 30%;
-        height: 58%;
+        height: 63%;
         order: 0;
 
         &__list {
