--- a/css/index.scss
+++ b/css/index.scss
@@ -19,7 +19,7 @@ body {
     font-family: "Inconsolata", monospace;
     line-height: 19.2px;
     font-size: 100%;
-    text-decoration: none !important;
+    text-decoration: none;
 }
 
 @page {
