--- a/css/icons.scss
+++ b/css/icons.scss
@@ -21,6 +21,7 @@
 @mixin icon gear, #565656;
 @mixin icon spanner, #565656;
 @mixin icon tools, #565656;
+@mixin icon drums;
 @mixin icon snowboard-race, #565656;
 @mixin icon bg1, #000;
 @mixin icon bg2, #000;
