--- a/css/index.scss
+++ b/css/index.scss
@@ -228,6 +228,7 @@ div[size="A4"] {
 
         .section-title {
             width: 100%;
+            margin: 18px 0 10px 0;
         }
 
         figure {
