--- a/css/index.scss
+++ b/css/index.scss
@@ -139,6 +139,10 @@ div[size="A4"] {
         .icon {
             vertical-align: text-bottom;
         }
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
     }
     .bg-image {
         position: absolute;
