--- a/css/index.scss
+++ b/css/index.scss
@@ -160,7 +160,7 @@ div[size="A4"] {
     justify-content: flex-start;
     align-content: space-between;
     position: relative;
-    top: -60px;
+    top: -40px;
     height: 250mm;
 
     .section-title {
@@ -198,9 +198,7 @@ div[size="A4"] {
                 font-weight: 700;
             }
             ul {
-                margin: 0;
-                padding-top: 5px;
-                padding-bottom: 5px;
+                margin: 3px 0 2px 0 ;
                 font-size: 14px;
             }
         }
